# simple-binary-tree-tasks-DanielY19

./: CMakeLists.txt  README.md
.github/classroom/: autograding.json
src/: solution.cpp
